syntax = "proto3";

package chittyChat;

option go_package = "gRPC/proto";

message MessageFromClient {
    string name = 1;
    string msg = 2;
    string timestamp = 3;
}

message MessageFromServer {
    string name = 1;
    string msg = 2;
    string timestamp = 3;
}

service Chat {
    rpc ChatService(MessageFromClient) returns (MessageFromServer);
}


